--- a/config/locales/models.fr.yml
+++ b/config/locales/models.fr.yml
@@ -11,6 +11,7 @@ fr:
         current_password: "Mot de passe actuel"
         password: "Mot de passe"
         password_confirmation: "Confirmer le mot de passe"
+        remember_me: Se souvenir de moi...
       member:
         gender: "Sexe"
         firstname: "Prénom"
